--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.0",
+    "suspense": "0.0.1",
     "use-history": "^1.4.1",
     "web-vitals": "^2.1.4"
   },
