--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^5.2.0",
+    "react-router": "0.0.0-experimental-compat.6",
+    "react-router-dom": "0.0.0-experimental-compat.6",
     "react-scripts": "5.0.0",
+    "routes": "^2.1.0",
     "suspense": "0.0.1",
     "use-history": "^1.4.1",
     "web-vitals": "^2.1.4"
