--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "react-router": "0.0.0-experimental-compat.6",
     "react-router-dom": "0.0.0-experimental-compat.6",
     "react-scripts": "5.0.0",
+    "react-use-navigate": "^0.1.1",
     "routes": "^2.1.0",
     "suspense": "0.0.1",
+    "use": "^3.1.1",
     "use-history": "^1.4.1",
     "web-vitals": "^2.1.4"
   },
