--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "history": "^5.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router": "0.0.0-experimental-compat.6",
-    "react-router-dom": "0.0.0-experimental-compat.6",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.0",
     "react-use-navigate": "^0.1.1",
     "routes": "^2.1.0",
